[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-pipeline-toolkit"
version = "0.1.0"
description = "Modular content pipeline for SEO research, drafting, optimization, and publishing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/content-pipeline-toolkit"
Issues = "https://github.com/erron-ai/content-pipeline-toolkit/issues"

[project.scripts]
content-pipeline-toolkit = "content_pipeline_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
